# HouseParty.Server/openapi/houseparty-server.json
@@ -93,45 +93,6 @@
         }
       }
     },
-    "/api/rooms/{roomId}/increment": {
-      "post": {
-        "tags": [
-          "Rooms"
-        ],
-        "parameters": [
-          {
-            "name": "roomId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/RoomCounterUpdated"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RoomCounterUpdated"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RoomCounterUpdated"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/signalr/negotiate": {
       "post": {
         "tags": [
@@ -164,22 +125,6 @@
   },
   "components": {
     "schemas": {
-      "RoomCounterUpdated": {
-        "required": [
-          "counter"
-        ],
-        "type": "object",
-        "properties": {
-          "counter": {
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int32"
-          }
-        }
-      },
       "RoomCreated": {
         "required": [
           "id"
@@ -193,13 +138,39 @@
       },
       "RoomJoined": {
         "required": [
-          "counter"
+          "player",
+          "players"
         ],
         "type": "object",
         "properties": {
-          "counter": {
+          "player": {
+            "$ref": "#/components/schemas/RoomPlayer"
+          },
+          "players": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RoomPlayer"
+            }
+          }
+        }
+      },
+      "RoomJoinRequest": {
+        "required": [
+          "connectionId",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "connectionId": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "playerNumber": {
             "pattern": "^-?(?:0|[1-9]\\d*)$",
             "type": [
+              "null",
               "integer",
               "string"
             ],
@@ -207,13 +178,22 @@
           }
         }
       },
-      "RoomJoinRequest": {
+      "RoomPlayer": {
         "required": [
-          "connectionId"
+          "number",
+          "name"
         ],
         "type": "object",
         "properties": {
-          "connectionId": {
+          "number": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "name": {
             "type": "string"
           }
         }
